--- a/(chopping)TensorflowKerasCNN.ipynb
+++ b/(chopping)TensorflowKerasCNN.ipynb
@@ -6,7 +6,7 @@
       "private_outputs": true,
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNjzBNr5iXAqYUrIggHIVF2",
+      "authorship_tag": "ABX9TyNT3/0qsq4E5VB8BsvkU9pQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -579,7 +579,7 @@
     {
       "cell_type": "code",
       "source": [
-        "img = cv2.imread('/content/gdrive/My Drive/data_set_TensorflowKerasCNN_chopping/chopping/550px-nowatermark-Chop-Food-Like-a-Pro-Step-9-Version-8.jpg')\n",
+        "img = cv2.imread('/content/gdrive/My Drive/dataset_chopping/chopping/chopping-board-care-6401bca3ee951.jpg')\n",
         "plt.imshow(img)\n",
         "plt.show()"
       ],
@@ -628,9 +628,9 @@
       "cell_type": "code",
       "source": [
         "if yhat > 0.5:\n",
-        "    print(f'Predicted class is Chopping')\n",
+        "    print(f'Predicted class is Washing Hands')\n",
         "else:\n",
-        "    print(f'Predicted class is None')"
+        "    print(f'Predicted class is Chopping')"
       ],
       "metadata": {
         "id": "eKZ3hNBFuX_D"
@@ -641,7 +641,7 @@
     {
       "cell_type": "code",
       "source": [
-        "img = cv2.imread('/content/gdrive/My Drive/data_set_TensorflowKerasCNN_chopping/none/top-view-of-hands-cutting-tofu-with-knife-photo.jpg')\n",
+        "img = cv2.imread('/content/gdrive/My Drive/dataset_chopping/washingHands/close-up-photo-woman-washing-hands-white-clean-basin-home-washroom-top-view_234039-98.jpg')\n",
         "plt.imshow(img)\n",
         "plt.show()"
       ],
@@ -690,12 +690,136 @@
       "cell_type": "code",
       "source": [
         "if yhat > 0.5:\n",
-        "    print(f'Predicted class is Chopping')\n",
+        "    print(f'Predicted class is Washing Hands')\n",
         "else:\n",
-        "    print(f'Predicted class is None')"
+        "    print(f'Predicted class is Chopping')"
       ],
       "metadata": {
         "id": "P0_uqarnKqNe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "img = cv2.imread('/content/gdrive/My Drive/dataset_chopping/washingHands/top-view-asian-woman-hand-washing-with-faucet-water-kitchen-home_41418-4694.jpg')\n",
+        "plt.imshow(img)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "g1LwORv7p9Zv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "resize = tf.image.resize(img, (256,256))\n",
+        "plt.imshow(resize.numpy().astype(int))\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "AYEIOM7GqSyd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "yhat = model.predict(np.expand_dims(resize/255, 0))"
+      ],
+      "metadata": {
+        "id": "VVGDTp4tqVZL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "yhat"
+      ],
+      "metadata": {
+        "id": "2FjIpAtcqZUH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if yhat > 0.5:\n",
+        "    print(f'Predicted class is Washing Hands')\n",
+        "else:\n",
+        "    print(f'Predicted class is Chopping')"
+      ],
+      "metadata": {
+        "id": "5lw4Re4NqdKH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "img = cv2.imread('/content/gdrive/My Drive/dataset_chopping/chopping/depositphotos_204345452-stock-photo-female-hands-with-a-knife.jpg')\n",
+        "plt.imshow(img)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "e4jmEneFqobd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "resize = tf.image.resize(img, (256,256))\n",
+        "plt.imshow(resize.numpy().astype(int))\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "hLe-VWhHqzXO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "yhat = model.predict(np.expand_dims(resize/255, 0))"
+      ],
+      "metadata": {
+        "id": "dAUbSHoFq7AG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "yhat"
+      ],
+      "metadata": {
+        "id": "UDIx1itUq9jg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if yhat > 0.5:\n",
+        "    print(f'Predicted class is Washing Hands')\n",
+        "else:\n",
+        "    print(f'Predicted class is Chopping')"
+      ],
+      "metadata": {
+        "id": "FcesWo85rBhu"
       },
       "execution_count": null,
       "outputs": []
